net/sdk/network/Azure.ResourceManager.Network/tests/SessionRecords/NetworkInterfaceTests/NetworkInterfaceNetworkSecurityGroupTest[2021-04-01].json
{
  "Entries": [
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c?api-version=**",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "traceparent": "00-743f57d03f84d975a054042f1a510e65-bffbe5423d40c635-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "1dcee6cf35034331dd43c1e72a790e71",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "748",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:24:59 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-correlation-request-id": "2390fc23-cc2d-449b-bf36-905df90d42f9",
        "x-ms-ratelimit-remaining-subscription-reads": "11217",
        "x-ms-request-id": "2390fc23-cc2d-449b-bf36-905df90d42f9",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T152459Z:2390fc23-cc2d-449b-bf36-905df90d42f9"
      },
      "ResponseBody": {
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c",
        "authorizationSource": "RoleBased",
        "managedByTenants": [],
        "tags": {
          "TagKey-9823": "TagValue-1254",
          "TagKey-3481": "TagValue-320",
          "TagKey-4926": "TagValue-1187",
          "TagKey-751": "TagValue-3921",
          "TagKey-1866": "TagValue-8559",
          "TagKey-3094": "TagValue-9190",
          "TagKey-2449": "TagValue-9",
          "TagKey-8379": "TagValue-164",
          "TagKey-7470": "TagValue-2205",
          "TagKey-4236": "TagValue-3698",
          "TagKey-5316": "TagValue-2725"
        },
        "subscriptionId": "db1ab6f0-4769-4b27-930e-01e2ef9c123c",
        "tenantId": "72f988bf-86f1-41af-91ab-2d7cd011db47",
        "displayName": ".NET Mgmt SDK Test with TTL = 1 Day",
        "state": "Enabled",
        "subscriptionPolicies": {
          "locationPlacementId": "Internal_2014-09-01",
          "quotaId": "Internal_2014-09-01",
          "spendingLimit": "Off"
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourcegroups/csmrg5576?api-version=**",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "21",
        "Content-Type": "application/json",
        "traceparent": "00-2fba9215ce5f3d2cd42890a3c72a07b4-961230e19274bfb2-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "d855748d725e43edd285c723f5888336",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "location": "westus"
      },
      "StatusCode": 201,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "215",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:24:59 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-correlation-request-id": "7d417593-5b0b-40ca-8de5-111c1aa1964b",
        "x-ms-ratelimit-remaining-subscription-writes": "998",
        "x-ms-request-id": "7d417593-5b0b-40ca-8de5-111c1aa1964b",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T152459Z:7d417593-5b0b-40ca-8de5-111c1aa1964b"
      },
      "ResponseBody": {
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg5576",
        "name": "csmrg5576",
        "type": "Microsoft.Resources/resourceGroups",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded"
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg5576/providers/Microsoft.Network/virtualNetworks/azsmnet1977?api-version=2023-02-01",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "220",
        "Content-Type": "application/json",
        "traceparent": "00-1dc15d3c2f767dd9b130fe904e529e1c-0b05b4c67492e71c-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "3886de3a0ff6b6f410a87bd993b2bcfe",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "properties": {
          "addressSpace": {
            "addressPrefixes": [
              "10.0.0.0/16"
            ]
          },
          "dhcpOptions": {
            "dnsServers": [
              "10.1.1.1",
              "10.1.2.4"
            ]
          },
          "subnets": [
            {
              "properties": {
                "addressPrefix": "10.0.0.0/24"
              }
            }
          ]
        },
        "location": "westus"
      },
      "StatusCode": 201,
      "ResponseHeaders": {
        "Azure-AsyncNotification": "Enabled",
        "Azure-AsyncOperation": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/2ceeea3d-af2d-4bb2-aa1e-3826bdcab318?api-version=2023-02-01",
        "Cache-Control": "no-cache",
        "Content-Length": "1019",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:25:02 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "3",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "6ba7a10a-2fb1-4f21-bd81-12ddea4532b8",
        "x-ms-client-request-id": "3886de3a0ff6b6f410a87bd993b2bcfe",
        "x-ms-correlation-request-id": "fe5ae0e3-87ee-4766-9654-b6914d5ca8a8",
        "x-ms-ratelimit-remaining-subscription-writes": "997",
        "x-ms-request-id": "2ceeea3d-af2d-4bb2-aa1e-3826bdcab318",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T152503Z:fe5ae0e3-87ee-4766-9654-b6914d5ca8a8"
      },
      "ResponseBody": {
        "name": "azsmnet1977",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg5576/providers/Microsoft.Network/virtualNetworks/azsmnet1977",
        "etag": "W/\"cd2d0349-e8ec-4fa5-8817-0297e7e964ea\"",
        "type": "Microsoft.Network/virtualNetworks",
        "location": "westus",
        "properties": {
          "provisioningState": "Updating",
          "resourceGuid": "3997795a-7712-4afc-af4f-f4c1ecb84901",
          "addressSpace": {
            "addressPrefixes": [
              "10.0.0.0/16"
            ]
          },
          "dhcpOptions": {
            "dnsServers": [
              "10.1.1.1",
              "10.1.2.4"
            ]
          },
          "subnets": [
            {
              "name": "azsmnet1449",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg5576/providers/Microsoft.Network/virtualNetworks/azsmnet1977/subnets/azsmnet1449",
              "etag": "W/\"cd2d0349-e8ec-4fa5-8817-0297e7e964ea\"",
              "properties": {
                "provisioningState": "Updating",
                "addressPrefix": "10.0.0.0/24",
                "delegations": [],
                "privateEndpointNetworkPolicies": "Disabled",
                "privateLinkServiceNetworkPolicies": "Enabled"
              },
              "type": "Microsoft.Network/virtualNetworks/subnets"
            }
          ],
          "virtualNetworkPeerings": [],
          "enableDdosProtection": false
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/2ceeea3d-af2d-4bb2-aa1e-3826bdcab318?api-version=2023-02-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-1dc15d3c2f767dd9b130fe904e529e1c-019725ec114dfd0b-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "aeb8950a1ced4fe27e3733290aee9042",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "23",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:25:03 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "10",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "ac12d622-de63-4ac0-a565-876a91ea12e1",
        "x-ms-client-request-id": "aeb8950a1ced4fe27e3733290aee9042",
        "x-ms-correlation-request-id": "efe1c7a1-8d78-475d-b7d0-6de34e5707ea",
        "x-ms-ratelimit-remaining-subscription-reads": "11216",
        "x-ms-request-id": "357df767-0350-4ded-9da6-956566175fd2",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T152503Z:efe1c7a1-8d78-475d-b7d0-6de34e5707ea"
      },
      "ResponseBody": {
        "status": "InProgress"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/2ceeea3d-af2d-4bb2-aa1e-3826bdcab318?api-version=2023-02-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-1dc15d3c2f767dd9b130fe904e529e1c-3c53109689869b18-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "f74e84cb907060fbaed6ced62639785f",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "22",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:25:13 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "2e321c27-8b5a-4c4e-9ad1-3d437ad755ce",
        "x-ms-client-request-id": "f74e84cb907060fbaed6ced62639785f",
        "x-ms-correlation-request-id": "0482fc7d-bd20-4c27-b5cb-4e44d66837d1",
        "x-ms-ratelimit-remaining-subscription-reads": "11215",
        "x-ms-request-id": "bec943e3-ad1b-48c7-93f8-72a1f7062f11",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T152513Z:0482fc7d-bd20-4c27-b5cb-4e44d66837d1"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg5576/providers/Microsoft.Network/virtualNetworks/azsmnet1977?api-version=2023-02-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-1dc15d3c2f767dd9b130fe904e529e1c-8ba9a579c505c43e-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "fecfe3f60ef9cb119e21f5a9a706a57b",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "1021",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:25:13 GMT",
        "ETag": "W/\"184ff112-b2cf-4346-8e76-70dbd80b3975\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "41c61e5f-90f0-484f-b3fe-6c711ddb3d87",
        "x-ms-client-request-id": "fecfe3f60ef9cb119e21f5a9a706a57b",
        "x-ms-correlation-request-id": "acdf3b6e-72c4-4122-a994-1b6bfc76e0d6",
        "x-ms-ratelimit-remaining-subscription-reads": "11214",
        "x-ms-request-id": "5638034e-5322-4fe7-bef3-4ff95aa99860",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T152514Z:acdf3b6e-72c4-4122-a994-1b6bfc76e0d6"
      },
      "ResponseBody": {
        "name": "azsmnet1977",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg5576/providers/Microsoft.Network/virtualNetworks/azsmnet1977",
        "etag": "W/\"184ff112-b2cf-4346-8e76-70dbd80b3975\"",
        "type": "Microsoft.Network/virtualNetworks",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "3997795a-7712-4afc-af4f-f4c1ecb84901",
          "addressSpace": {
            "addressPrefixes": [
              "10.0.0.0/16"
            ]
          },
          "dhcpOptions": {
            "dnsServers": [
              "10.1.1.1",
              "10.1.2.4"
            ]
          },
          "subnets": [
            {
              "name": "azsmnet1449",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg5576/providers/Microsoft.Network/virtualNetworks/azsmnet1977/subnets/azsmnet1449",
              "etag": "W/\"184ff112-b2cf-4346-8e76-70dbd80b3975\"",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.0.0.0/24",
                "delegations": [],
                "privateEndpointNetworkPolicies": "Disabled",
                "privateLinkServiceNetworkPolicies": "Enabled"
              },
              "type": "Microsoft.Network/virtualNetworks/subnets"
            }
          ],
          "virtualNetworkPeerings": [],
          "enableDdosProtection": false
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg5576/providers/Microsoft.Network/networkSecurityGroups/azsmnet4911?api-version=2023-02-01",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "313",
        "Content-Type": "application/json",
        "traceparent": "00-d7a8fe2bb8942f8d8ca9d2e0c05e618a-4707bb233fb954a8-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "b9efa68fbb627927995800164e0b2845",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "properties": {
          "securityRules": [
            {
              "properties": {
                "description": "Test security rule",
                "protocol": "Tcp",
                "sourcePortRange": "655",
                "destinationPortRange": "123-3500",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 500,
                "direction": "Inbound"
              }
            }
          ]
        },
        "location": "westus"
      },
      "StatusCode": 201,
      "ResponseHeaders": {
        "Azure-AsyncNotification": "Enabled",
        "Azure-AsyncOperation": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/557a8c98-1f34-4b12-bdec-1a3ac0c9ffcb?api-version=2023-02-01",
        "Cache-Control": "no-cache",
        "Content-Length": "5555",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:25:16 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "1",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "5e51114e-5c9f-4e93-956f-e913f829e780",
        "x-ms-client-request-id": "b9efa68fbb627927995800164e0b2845",
        "x-ms-correlation-request-id": "7015a627-c1c6-4e26-ab28-b43e998222a5",
        "x-ms-ratelimit-remaining-subscription-writes": "996",
        "x-ms-request-id": "557a8c98-1f34-4b12-bdec-1a3ac0c9ffcb",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T152516Z:7015a627-c1c6-4e26-ab28-b43e998222a5"
      },
      "ResponseBody": {
        "name": "azsmnet4911",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg5576/providers/Microsoft.Network/networkSecurityGroups/azsmnet4911",
        "etag": "W/\"db29bcf9-b5de-4d9c-b8ec-e21c6726bf46\"",
        "type": "Microsoft.Network/networkSecurityGroups",
        "location": "westus",
        "properties": {
          "provisioningState": "Updating",
          "resourceGuid": "f47ef3c7-16bf-4118-93ac-da49091bc148",
          "securityRules": [
            {
              "name": "azsmnet3888",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg5576/providers/Microsoft.Network/networkSecurityGroups/azsmnet4911/securityRules/azsmnet3888",
              "etag": "W/\"db29bcf9-b5de-4d9c-b8ec-e21c6726bf46\"",
              "type": "Microsoft.Network/networkSecurityGroups/securityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Test security rule",
                "protocol": "Tcp",
                "sourcePortRange": "655",
                "destinationPortRange": "123-3500",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 500,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            }
          ],
          "defaultSecurityRules": [
            {
              "name": "AllowVnetInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg5576/providers/Microsoft.Network/networkSecurityGroups/azsmnet4911/defaultSecurityRules/AllowVnetInBound",
              "etag": "W/\"db29bcf9-b5de-4d9c-b8ec-e21c6726bf46\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Allow inbound traffic from all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowAzureLoadBalancerInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg5576/providers/Microsoft.Network/networkSecurityGroups/azsmnet4911/defaultSecurityRules/AllowAzureLoadBalancerInBound",
              "etag": "W/\"db29bcf9-b5de-4d9c-b8ec-e21c6726bf46\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Allow inbound traffic from azure load balancer",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "AzureLoadBalancer",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 65001,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg5576/providers/Microsoft.Network/networkSecurityGroups/azsmnet4911/defaultSecurityRules/DenyAllInBound",
              "etag": "W/\"db29bcf9-b5de-4d9c-b8ec-e21c6726bf46\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Deny all inbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowVnetOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg5576/providers/Microsoft.Network/networkSecurityGroups/azsmnet4911/defaultSecurityRules/AllowVnetOutBound",
              "etag": "W/\"db29bcf9-b5de-4d9c-b8ec-e21c6726bf46\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowInternetOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg5576/providers/Microsoft.Network/networkSecurityGroups/azsmnet4911/defaultSecurityRules/AllowInternetOutBound",
              "etag": "W/\"db29bcf9-b5de-4d9c-b8ec-e21c6726bf46\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Allow outbound traffic from all VMs to Internet",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "Internet",
                "access": "Allow",
                "priority": 65001,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg5576/providers/Microsoft.Network/networkSecurityGroups/azsmnet4911/defaultSecurityRules/DenyAllOutBound",
              "etag": "W/\"db29bcf9-b5de-4d9c-b8ec-e21c6726bf46\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Deny all outbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/557a8c98-1f34-4b12-bdec-1a3ac0c9ffcb?api-version=2023-02-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-d7a8fe2bb8942f8d8ca9d2e0c05e618a-99a17d7c0ca664d3-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "80475230bf493bfdbb5564a10efa7c92",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "22",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:25:16 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "e0c4a672-5741-42e2-b003-9498538bad6a",
        "x-ms-client-request-id": "80475230bf493bfdbb5564a10efa7c92",
        "x-ms-correlation-request-id": "071018ef-3ce6-4dec-8f4b-a4a4bfd96e32",
        "x-ms-ratelimit-remaining-subscription-reads": "11213",
        "x-ms-request-id": "6166b411-8abb-4570-bdcb-0dc71ae65f62",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T152517Z:071018ef-3ce6-4dec-8f4b-a4a4bfd96e32"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg5576/providers/Microsoft.Network/networkSecurityGroups/azsmnet4911?api-version=2023-02-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-d7a8fe2bb8942f8d8ca9d2e0c05e618a-8a9d13f123e75186-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "d3eab0f87fd3fc5c5d3245de62d8dd47",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "5563",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:25:17 GMT",
        "ETag": "W/\"e8ad838f-85c6-4297-9fe6-1fce4b5c6ed0\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "7cfa2454-d6f9-4f16-b74f-c23ee1f464ed",
        "x-ms-client-request-id": "d3eab0f87fd3fc5c5d3245de62d8dd47",
        "x-ms-correlation-request-id": "ecff3723-4c30-43e3-91f4-62c57386194b",
        "x-ms-ratelimit-remaining-subscription-reads": "11212",
        "x-ms-request-id": "58f5a7df-234f-45e6-8131-5fed5184b5ab",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T152517Z:ecff3723-4c30-43e3-91f4-62c57386194b"
      },
      "ResponseBody": {
        "name": "azsmnet4911",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg5576/providers/Microsoft.Network/networkSecurityGroups/azsmnet4911",
        "etag": "W/\"e8ad838f-85c6-4297-9fe6-1fce4b5c6ed0\"",
        "type": "Microsoft.Network/networkSecurityGroups",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "f47ef3c7-16bf-4118-93ac-da49091bc148",
          "securityRules": [
            {
              "name": "azsmnet3888",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg5576/providers/Microsoft.Network/networkSecurityGroups/azsmnet4911/securityRules/azsmnet3888",
              "etag": "W/\"e8ad838f-85c6-4297-9fe6-1fce4b5c6ed0\"",
              "type": "Microsoft.Network/networkSecurityGroups/securityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Test security rule",
                "protocol": "Tcp",
                "sourcePortRange": "655",
                "destinationPortRange": "123-3500",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 500,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            }
          ],
          "defaultSecurityRules": [
            {
              "name": "AllowVnetInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg5576/providers/Microsoft.Network/networkSecurityGroups/azsmnet4911/defaultSecurityRules/AllowVnetInBound",
              "etag": "W/\"e8ad838f-85c6-4297-9fe6-1fce4b5c6ed0\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow inbound traffic from all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowAzureLoadBalancerInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg5576/providers/Microsoft.Network/networkSecurityGroups/azsmnet4911/defaultSecurityRules/AllowAzureLoadBalancerInBound",
              "etag": "W/\"e8ad838f-85c6-4297-9fe6-1fce4b5c6ed0\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow inbound traffic from azure load balancer",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "AzureLoadBalancer",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 65001,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg5576/providers/Microsoft.Network/networkSecurityGroups/azsmnet4911/defaultSecurityRules/DenyAllInBound",
              "etag": "W/\"e8ad838f-85c6-4297-9fe6-1fce4b5c6ed0\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Deny all inbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowVnetOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg5576/providers/Microsoft.Network/networkSecurityGroups/azsmnet4911/defaultSecurityRules/AllowVnetOutBound",
              "etag": "W/\"e8ad838f-85c6-4297-9fe6-1fce4b5c6ed0\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowInternetOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg5576/providers/Microsoft.Network/networkSecurityGroups/azsmnet4911/defaultSecurityRules/AllowInternetOutBound",
              "etag": "W/\"e8ad838f-85c6-4297-9fe6-1fce4b5c6ed0\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow outbound traffic from all VMs to Internet",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "Internet",
                "access": "Allow",
                "priority": 65001,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg5576/providers/Microsoft.Network/networkSecurityGroups/azsmnet4911/defaultSecurityRules/DenyAllOutBound",
              "etag": "W/\"e8ad838f-85c6-4297-9fe6-1fce4b5c6ed0\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Deny all outbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg5576/providers/Microsoft.Network/networkInterfaces/azsmnet8594?api-version=2021-04-01",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "1169",
        "Content-Type": "application/json",
        "traceparent": "00-5ca77505009510b5f16430c9e8d3d0b6-5794af0cf8f9e16e-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "a8c4fbe5fffbf7d66bc92ea8af7806c5",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "tags": {
          "key": "value"
        },
        "properties": {
          "networkSecurityGroup": {
            "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg5576/providers/Microsoft.Network/networkSecurityGroups/azsmnet4911",
            "location": "westus"
          },
          "ipConfigurations": [
            {
              "properties": {
                "privateIPAllocationMethod": "Dynamic",
                "subnet": {
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg5576/providers/Microsoft.Network/virtualNetworks/azsmnet1977/subnets/azsmnet1449"
                }
              }
            }
          ]
        },
        "location": "westus"
      },
      "StatusCode": 201,
      "ResponseHeaders": {
        "Azure-AsyncNotification": "Enabled",
        "Azure-AsyncOperation": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/d01c68aa-49f7-4e04-b91d-64979c1ca06f?api-version=2021-04-01",
        "Cache-Control": "no-cache",
        "Content-Length": "1861",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:25:20 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "aadcc680-2e16-4e1f-b4de-e4bac9f148a5",
        "x-ms-client-request-id": "a8c4fbe5fffbf7d66bc92ea8af7806c5",
        "x-ms-correlation-request-id": "47b98bc7-1469-46a4-920e-7f383fc55611",
        "x-ms-ratelimit-remaining-subscription-writes": "995",
        "x-ms-request-id": "d01c68aa-49f7-4e04-b91d-64979c1ca06f",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T152520Z:47b98bc7-1469-46a4-920e-7f383fc55611"
      },
      "ResponseBody": {
        "name": "azsmnet8594",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg5576/providers/Microsoft.Network/networkInterfaces/azsmnet8594",
        "etag": "W/\"b59c8884-f496-4303-b2ad-a08bf9ac2a8a\"",
        "tags": {
          "key": "value"
        },
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "20e8e1fa-561b-46a0-ae1e-cb87be6b4a2c",
          "ipConfigurations": [
            {
              "name": "azsmnet4221",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg5576/providers/Microsoft.Network/networkInterfaces/azsmnet8594/ipConfigurations/azsmnet4221",
              "etag": "W/\"b59c8884-f496-4303-b2ad-a08bf9ac2a8a\"",
              "type": "Microsoft.Network/networkInterfaces/ipConfigurations",
              "properties": {
                "provisioningState": "Succeeded",
                "privateIPAddress": "10.0.0.4",
                "privateIPAllocationMethod": "Dynamic",
                "subnet": {
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg5576/providers/Microsoft.Network/virtualNetworks/azsmnet1977/subnets/azsmnet1449"
                },
                "primary": true,
                "privateIPAddressVersion": "IPv4"
              }
            }
          ],
          "dnsSettings": {
            "dnsServers": [],
            "appliedDnsServers": [],
            "internalDomainNameSuffix": "lj2zooiso54evl0p4ta4zocjab.dx.internal.cloudapp.net"
          },
          "vnetEncryptionSupported": false,
          "enableIPForwarding": false,
          "networkSecurityGroup": {
            "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg5576/providers/Microsoft.Network/networkSecurityGroups/azsmnet4911"
          },
          "hostedWorkloads": [],
          "tapConfigurations": [],
          "nicType": "Standard"
        },
        "type": "Microsoft.Network/networkInterfaces",
        "location": "westus"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/d01c68aa-49f7-4e04-b91d-64979c1ca06f?api-version=2021-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-5ca77505009510b5f16430c9e8d3d0b6-36359072556c3cd8-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "8015b50150ceeab4fcdc1393ceb483cc",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "29",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:25:20 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "c74c50af-b34c-41fc-a079-40baca573a3e",
        "x-ms-client-request-id": "8015b50150ceeab4fcdc1393ceb483cc",
        "x-ms-correlation-request-id": "57832c9c-269b-414a-93ff-97e3a9f13d63",
        "x-ms-ratelimit-remaining-subscription-reads": "11211",
        "x-ms-request-id": "bd068b87-7df8-4e76-bc5e-e2007f7a203d",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T152520Z:57832c9c-269b-414a-93ff-97e3a9f13d63"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg5576/providers/Microsoft.Network/networkInterfaces/azsmnet8594?api-version=2021-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-5ca77505009510b5f16430c9e8d3d0b6-110bb78e8a73c838-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "f1829dd8b9e03384057a84e386b81e88",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "1861",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:25:20 GMT",
        "ETag": "W/\"b59c8884-f496-4303-b2ad-a08bf9ac2a8a\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "7b689438-6e10-4f55-ae49-980fc95277b3",
        "x-ms-client-request-id": "f1829dd8b9e03384057a84e386b81e88",
        "x-ms-correlation-request-id": "dee6ead9-68fc-4f9b-8aa5-3466cc0ec682",
        "x-ms-ratelimit-remaining-subscription-reads": "11210",
        "x-ms-request-id": "48182a56-5716-404e-b15d-1615e903e69e",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T152521Z:dee6ead9-68fc-4f9b-8aa5-3466cc0ec682"
      },
      "ResponseBody": {
        "name": "azsmnet8594",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg5576/providers/Microsoft.Network/networkInterfaces/azsmnet8594",
        "etag": "W/\"b59c8884-f496-4303-b2ad-a08bf9ac2a8a\"",
        "tags": {
          "key": "value"
        },
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "20e8e1fa-561b-46a0-ae1e-cb87be6b4a2c",
          "ipConfigurations": [
            {
              "name": "azsmnet4221",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg5576/providers/Microsoft.Network/networkInterfaces/azsmnet8594/ipConfigurations/azsmnet4221",
              "etag": "W/\"b59c8884-f496-4303-b2ad-a08bf9ac2a8a\"",
              "type": "Microsoft.Network/networkInterfaces/ipConfigurations",
              "properties": {
                "provisioningState": "Succeeded",
                "privateIPAddress": "10.0.0.4",
                "privateIPAllocationMethod": "Dynamic",
                "subnet": {
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg5576/providers/Microsoft.Network/virtualNetworks/azsmnet1977/subnets/azsmnet1449"
                },
                "primary": true,
                "privateIPAddressVersion": "IPv4"
              }
            }
          ],
          "dnsSettings": {
            "dnsServers": [],
            "appliedDnsServers": [],
            "internalDomainNameSuffix": "lj2zooiso54evl0p4ta4zocjab.dx.internal.cloudapp.net"
          },
          "vnetEncryptionSupported": false,
          "enableIPForwarding": false,
          "networkSecurityGroup": {
            "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg5576/providers/Microsoft.Network/networkSecurityGroups/azsmnet4911"
          },
          "hostedWorkloads": [],
          "tapConfigurations": [],
          "nicType": "Standard"
        },
        "type": "Microsoft.Network/networkInterfaces",
        "location": "westus"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg5576/providers/Microsoft.Network/networkInterfaces/azsmnet8594?api-version=2021-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "traceparent": "00-95361acad4e3835397eb997d96e28d8c-a39035c6db5b02b8-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "f9a61150856306f6377ce8f79d637b6e",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "1861",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:25:21 GMT",
        "ETag": "W/\"b59c8884-f496-4303-b2ad-a08bf9ac2a8a\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "89e244de-25d7-45c1-b82d-ac5083f16c98",
        "x-ms-client-request-id": "f9a61150856306f6377ce8f79d637b6e",
        "x-ms-correlation-request-id": "ec9b0245-4311-48b7-a686-51af734b3ee2",
        "x-ms-ratelimit-remaining-subscription-reads": "11209",
        "x-ms-request-id": "1987e016-2631-4a25-b3d6-3777e0d3b86e",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T152521Z:ec9b0245-4311-48b7-a686-51af734b3ee2"
      },
      "ResponseBody": {
        "name": "azsmnet8594",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg5576/providers/Microsoft.Network/networkInterfaces/azsmnet8594",
        "etag": "W/\"b59c8884-f496-4303-b2ad-a08bf9ac2a8a\"",
        "tags": {
          "key": "value"
        },
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "20e8e1fa-561b-46a0-ae1e-cb87be6b4a2c",
          "ipConfigurations": [
            {
              "name": "azsmnet4221",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg5576/providers/Microsoft.Network/networkInterfaces/azsmnet8594/ipConfigurations/azsmnet4221",
              "etag": "W/\"b59c8884-f496-4303-b2ad-a08bf9ac2a8a\"",
              "type": "Microsoft.Network/networkInterfaces/ipConfigurations",
              "properties": {
                "provisioningState": "Succeeded",
                "privateIPAddress": "10.0.0.4",
                "privateIPAllocationMethod": "Dynamic",
                "subnet": {
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg5576/providers/Microsoft.Network/virtualNetworks/azsmnet1977/subnets/azsmnet1449"
                },
                "primary": true,
                "privateIPAddressVersion": "IPv4"
              }
            }
          ],
          "dnsSettings": {
            "dnsServers": [],
            "appliedDnsServers": [],
            "internalDomainNameSuffix": "lj2zooiso54evl0p4ta4zocjab.dx.internal.cloudapp.net"
          },
          "vnetEncryptionSupported": false,
          "enableIPForwarding": false,
          "networkSecurityGroup": {
            "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg5576/providers/Microsoft.Network/networkSecurityGroups/azsmnet4911"
          },
          "hostedWorkloads": [],
          "tapConfigurations": [],
          "nicType": "Standard"
        },
        "type": "Microsoft.Network/networkInterfaces",
        "location": "westus"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg5576/providers/Microsoft.Network/networkSecurityGroups/azsmnet4911?api-version=2023-02-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "traceparent": "00-508bc35e257de4fb11c9eebdf012ec37-739a24c124860442-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "3b45ac948660483c31e17b54cbd06444",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "5729",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:25:21 GMT",
        "ETag": "W/\"c9e5d36e-24dd-414d-bda8-ffbb3b682d4c\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "513d1bd9-b8ab-4b92-b4c6-df99c23ee253",
        "x-ms-client-request-id": "3b45ac948660483c31e17b54cbd06444",
        "x-ms-correlation-request-id": "fa58f7ea-2588-4c74-9775-1b5773f84c33",
        "x-ms-ratelimit-remaining-subscription-reads": "11208",
        "x-ms-request-id": "053aebd5-632b-4e23-ad12-d887484f1a3c",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T152522Z:fa58f7ea-2588-4c74-9775-1b5773f84c33"
      },
      "ResponseBody": {
        "name": "azsmnet4911",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg5576/providers/Microsoft.Network/networkSecurityGroups/azsmnet4911",
        "etag": "W/\"c9e5d36e-24dd-414d-bda8-ffbb3b682d4c\"",
        "type": "Microsoft.Network/networkSecurityGroups",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "f47ef3c7-16bf-4118-93ac-da49091bc148",
          "securityRules": [
            {
              "name": "azsmnet3888",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg5576/providers/Microsoft.Network/networkSecurityGroups/azsmnet4911/securityRules/azsmnet3888",
              "etag": "W/\"c9e5d36e-24dd-414d-bda8-ffbb3b682d4c\"",
              "type": "Microsoft.Network/networkSecurityGroups/securityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Test security rule",
                "protocol": "Tcp",
                "sourcePortRange": "655",
                "destinationPortRange": "123-3500",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 500,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            }
          ],
          "defaultSecurityRules": [
            {
              "name": "AllowVnetInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg5576/providers/Microsoft.Network/networkSecurityGroups/azsmnet4911/defaultSecurityRules/AllowVnetInBound",
              "etag": "W/\"c9e5d36e-24dd-414d-bda8-ffbb3b682d4c\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow inbound traffic from all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowAzureLoadBalancerInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg5576/providers/Microsoft.Network/networkSecurityGroups/azsmnet4911/defaultSecurityRules/AllowAzureLoadBalancerInBound",
              "etag": "W/\"c9e5d36e-24dd-414d-bda8-ffbb3b682d4c\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow inbound traffic from azure load balancer",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "AzureLoadBalancer",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 65001,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg5576/providers/Microsoft.Network/networkSecurityGroups/azsmnet4911/defaultSecurityRules/DenyAllInBound",
              "etag": "W/\"c9e5d36e-24dd-414d-bda8-ffbb3b682d4c\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Deny all inbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowVnetOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg5576/providers/Microsoft.Network/networkSecurityGroups/azsmnet4911/defaultSecurityRules/AllowVnetOutBound",
              "etag": "W/\"c9e5d36e-24dd-414d-bda8-ffbb3b682d4c\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowInternetOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg5576/providers/Microsoft.Network/networkSecurityGroups/azsmnet4911/defaultSecurityRules/AllowInternetOutBound",
              "etag": "W/\"c9e5d36e-24dd-414d-bda8-ffbb3b682d4c\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow outbound traffic from all VMs to Internet",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "Internet",
                "access": "Allow",
                "priority": 65001,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg5576/providers/Microsoft.Network/networkSecurityGroups/azsmnet4911/defaultSecurityRules/DenyAllOutBound",
              "etag": "W/\"c9e5d36e-24dd-414d-bda8-ffbb3b682d4c\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Deny all outbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            }
          ],
          "networkInterfaces": [
            {
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg5576/providers/Microsoft.Network/networkInterfaces/azsmnet8594"
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg5576/providers/Microsoft.Network/networkInterfaces/azsmnet8594?api-version=2021-04-01",
      "RequestMethod": "DELETE",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-644515ea093d57f196f2eb46f15b95b6-57741428a9d72ee9-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "bc428bbd890e5269a67bba63d08c96a2",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Azure-AsyncNotification": "Enabled",
        "Azure-AsyncOperation": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/8a6f3941-baf6-4194-be71-166f123f7043?api-version=2021-04-01",
        "Cache-Control": "no-cache",
        "Content-Length": "0",
        "Date": "Wed, 28 Jun 2023 15:25:25 GMT",
        "Expires": "-1",
        "Location": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operationResults/8a6f3941-baf6-4194-be71-166f123f7043?api-version=2021-04-01",
        "Pragma": "no-cache",
        "Retry-After": "4",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "1fce7003-f4c3-4ba6-9321-fda75bc00a58",
        "x-ms-client-request-id": "bc428bbd890e5269a67bba63d08c96a2",
        "x-ms-correlation-request-id": "d0725c32-157d-419b-89de-00969ac32a3f",
        "x-ms-ratelimit-remaining-subscription-deletes": "14906",
        "x-ms-request-id": "8a6f3941-baf6-4194-be71-166f123f7043",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T152526Z:d0725c32-157d-419b-89de-00969ac32a3f"
      },
      "ResponseBody": null
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/8a6f3941-baf6-4194-be71-166f123f7043?api-version=2021-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-644515ea093d57f196f2eb46f15b95b6-3fe1aa7de4d36d20-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "123aa418be210a5f43f295e4ccd877a4",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "29",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:25:26 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "909c6f17-372f-4244-ab1c-58bb076ecdfd",
        "x-ms-client-request-id": "123aa418be210a5f43f295e4ccd877a4",
        "x-ms-correlation-request-id": "89782342-9d9a-4628-8e13-b1d475e29972",
        "x-ms-ratelimit-remaining-subscription-reads": "11207",
        "x-ms-request-id": "f51c133a-0422-49ee-84f5-7cb81b717228",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T152526Z:89782342-9d9a-4628-8e13-b1d475e29972"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg5576/providers/Microsoft.Network/networkInterfaces?api-version=2021-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "traceparent": "00-e24b84194611ad9279b81d958e32ecf2-481dd77968279660-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "b555d84b8a80dbd16377e7b0c1e74803",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "12",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:25:26 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-correlation-request-id": "3ec6ed8c-eee4-468c-93c3-e72fb2f7b917",
        "x-ms-ratelimit-remaining-subscription-reads": "11206",
        "x-ms-request-id": "3ec6ed8c-eee4-468c-93c3-e72fb2f7b917",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T152526Z:3ec6ed8c-eee4-468c-93c3-e72fb2f7b917"
      },
      "ResponseBody": {
        "value": []
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg5576/providers/Microsoft.Network/networkSecurityGroups/azsmnet4911?api-version=2023-02-01",
      "RequestMethod": "DELETE",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-ef838543cf71cb0a0e733f4e353cfb88-f317a469a92c25fe-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "2c4a544083523f81b644957f4d42fefd",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 202,
      "ResponseHeaders": {
        "Azure-AsyncNotification": "Enabled",
        "Azure-AsyncOperation": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/74d3c344-987b-464b-a6d1-780fded38042?api-version=2023-02-01",
        "Cache-Control": "no-cache",
        "Content-Length": "0",
        "Date": "Wed, 28 Jun 2023 15:25:26 GMT",
        "Expires": "-1",
        "Location": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operationResults/74d3c344-987b-464b-a6d1-780fded38042?api-version=2023-02-01",
        "Pragma": "no-cache",
        "Retry-After": "1",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "b95d9bae-d444-455e-83f8-52007218710d",
        "x-ms-client-request-id": "2c4a544083523f81b644957f4d42fefd",
        "x-ms-correlation-request-id": "c5b47451-ac28-45e9-aa32-c7fd8caf2be4",
        "x-ms-ratelimit-remaining-subscription-deletes": "14905",
        "x-ms-request-id": "74d3c344-987b-464b-a6d1-780fded38042",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T152527Z:c5b47451-ac28-45e9-aa32-c7fd8caf2be4"
      },
      "ResponseBody": null
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/74d3c344-987b-464b-a6d1-780fded38042?api-version=2023-02-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-ef838543cf71cb0a0e733f4e353cfb88-e35146b1b3aaa1b9-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "78a491aa4a8dc7525716fe3cf4528d20",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "22",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:25:27 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "a1655953-58f3-45ea-b1de-edeb53716968",
        "x-ms-client-request-id": "78a491aa4a8dc7525716fe3cf4528d20",
        "x-ms-correlation-request-id": "eff796a7-9682-4207-bf4b-2f2501d9ef31",
        "x-ms-ratelimit-remaining-subscription-reads": "11205",
        "x-ms-request-id": "7afad122-83b5-4494-88b6-4f80505436e3",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T152527Z:eff796a7-9682-4207-bf4b-2f2501d9ef31"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg5576/providers/Microsoft.Network/virtualNetworks/azsmnet1977?api-version=2023-02-01",
      "RequestMethod": "DELETE",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-12c09e776e50f01a3e959b454ce98fd9-0a4af0cdf6caab37-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "9dc9ea7917b1bab76ebc5af3d4d76806",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 202,
      "ResponseHeaders": {
        "Azure-AsyncNotification": "Enabled",
        "Azure-AsyncOperation": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/07402413-c301-4363-82a3-a6ffaf94cfaf?api-version=2023-02-01",
        "Cache-Control": "no-cache",
        "Content-Length": "0",
        "Date": "Wed, 28 Jun 2023 15:25:27 GMT",
        "Expires": "-1",
        "Location": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operationResults/07402413-c301-4363-82a3-a6ffaf94cfaf?api-version=2023-02-01",
        "Pragma": "no-cache",
        "Retry-After": "10",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "8cbcd896-be19-4be2-9561-f45d9d392db0",
        "x-ms-client-request-id": "9dc9ea7917b1bab76ebc5af3d4d76806",
        "x-ms-correlation-request-id": "09e51d9e-7424-4dfb-bc63-c1d1a941f8bd",
        "x-ms-ratelimit-remaining-subscription-deletes": "14904",
        "x-ms-request-id": "07402413-c301-4363-82a3-a6ffaf94cfaf",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T152528Z:09e51d9e-7424-4dfb-bc63-c1d1a941f8bd"
      },
      "ResponseBody": null
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/07402413-c301-4363-82a3-a6ffaf94cfaf?api-version=2023-02-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-12c09e776e50f01a3e959b454ce98fd9-29940cf419a7e7bf-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "ec2f8ed1abe593aad9e909d1f05ef37f",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "22",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:25:28 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "8944f660-ca84-4a72-bf0b-767a1d2428f3",
        "x-ms-client-request-id": "ec2f8ed1abe593aad9e909d1f05ef37f",
        "x-ms-correlation-request-id": "549b0053-a87f-4258-8e33-7120eabff7d5",
        "x-ms-ratelimit-remaining-subscription-reads": "11204",
        "x-ms-request-id": "518bbf05-f30b-4f5b-9096-90fe2be77033",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T152528Z:549b0053-a87f-4258-8e33-7120eabff7d5"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    }
  ],
  "Variables": {
    "AZURE_AUTHORITY_HOST": "https://login.microsoftonline.com",
    "LOCATION": "westus",
    "RandomSeed": "1920699866",
    "RESOURCE_MANAGER_URL": null,
    "SUBSCRIPTION_ID": "db1ab6f0-4769-4b27-930e-01e2ef9c123c"
  }
}
